--- a/css2.html
+++ b/css2.html
@@ -8,5 +8,7 @@
 <p class="para">How are you </p>
 <p> im lakshmi</p>
 <p>hai how are</p>
+<p>hello bvoczzz</p>
+<p>FREE FIRE MAX</p>
 </body>
 </html>
